src/objects/AT_Adoption_Trend__c.object
<CustomObject>
    <description>Analytic Snapshot storage for user adoption trends</description>
    <fields>
        <fullName>Editing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who performed the edit (or creation) of the record</description>
        <label>Editing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adoption_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object for which statistics were collected</description>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date and time that the statistics were collected</description>
        <inlineHelpText>123</inlineHelpText>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_mail__c</fullName>
        <description>test</description>
        <label>diz_mail__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_perc__c</fullName>
        <label>diz_perc__c</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>qawdasd</fullName>
                </value>
                <value>
                    <fullName>dssdf</fullName>
                </value>
                <value>
                    <fullName>hnbv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>getting_away_with_muder__c</fullName>
        <description>test</description>
        <externalId>true</externalId>
        <inlineHelpText>test</inlineHelpText>
        <label>getting_away_with_muder__c</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kill_them_all__c</fullName>
        <description>test</description>
        <label>kill_them_all__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asdasd</fullName>
                </value>
                <value>
                    <fullName>test for test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Adoption Trend</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Adoption Trend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>